--- a/public/views/pages/marketplace.html
+++ b/public/views/pages/marketplace.html
@@ -1,3 +1,86 @@
 ﻿<div class="ui form">
-    <!--Here users can upgrade their cars and teams-->
+    <h3>Upgrades</h3>
+    <h4>Upgrade your stuff here</h4>
+
+    <div class="ui items" style="margin-left:5%; margin-right:5%;">
+        <div class="item">
+            <div class="ui small image">
+                <img src="../img/crewlevel.jpg" />
+            </div>
+            <div class="content">
+                <div class="header">CrewLevel</div>
+                <div class="meta">
+                    <span class="price">£300</span>
+                </div>
+                <div class="description">
+                    <p>Upgrade your crew level</p>
+                    <button class="ui fluid large teal submit button">Upgrade</button>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="item">
+            <div class="ui small image">
+                <img src="../img/carBody.jpg" />
+            </div>
+            <div class="content">
+                <div class="header">Body level</div>
+                <div class="meta">
+                    <span class="price">£800</span>
+                </div>
+                <div class="description">
+                    <p>Upgrade your body level</p>
+                    <button class="ui fluid large teal submit button">Upgrade</button>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="item">
+            <div class="ui small image">
+                <img src="../img/engine.png" />
+            </div>
+            <div class="content">
+                <div class="header">engine level</div>
+                <div class="meta">
+                    <span class="price">£640</span>
+                </div>
+                <div class="description">
+                    <p>Upgrade your engine level</p>
+                    <button class="ui fluid large teal submit button">Upgrade</button>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="item">
+            <div class="ui small image">
+                <img src="../img/gearbox.jpg" />
+            </div>
+            <div class="content">
+                <div class="header">gearbox level</div>
+                <div class="meta">
+                    <span class="price">£640</span>
+                </div>
+                <div class="description">
+                    <p>Upgrade your gearbox level</p>
+                    <button class="ui fluid large teal submit button">Upgrade</button>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="item">
+            <div class="ui small image">
+                <img src="../img/tyre.png" />
+            </div>
+            <div class="content">
+                <div class="header">tyre level</div>
+                <div class="meta">
+                    <span class="price">£100</span>
+                </div>
+                <div class="description">
+                    <p>Upgrade your tyre level</p>
+                    <button class="ui fluid large teal submit button">Upgrade</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
