--- a/public/views/pages/leaderboard.html
+++ b/public/views/pages/leaderboard.html
@@ -11,7 +11,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="team in leader.teamdata | orderBy:'-experience'">
+        <tr ng-repeat="team in leader.teamdata track by $name">
             <th>{{team.name}}</th>
             <th>{{team.experience}}</th>
             <th>{{team.crewLevel}}</th>
