I have a game. Sort of.

--- a/public/views/pages/chat.html
+++ b/public/views/pages/chat.html
@@ -13,31 +13,24 @@
             <button class="ui primary button">send</button>
         </div>
     </form>
-    <form id="set-nick">
-        <div class="inline fields" id="nicknamediv">
-            <input type="text" style="max-width: 50%" id="nickname" />
-            <button class="ui primary button" type="submit" id="nickbox">set nickname</button>
-            <p id="error"></p>
-
-        </div>
-    </form>
-    <div id="users">
-        <h5>Chatroom members</h5>
-    </div>
 </div>
-
+<input hidden type="text" id="username" ng-true-value="{{user}}" value="{{user}}"/>
 <script>
-    $('#messagediv').hide();
-    var username = "";
+
     jQuery(function ($) {
+
         var socket = io();
         var message = $('#message');
         var form = $('#send-message');
         var chat = $('#chat');
+        var username = $('#username').val();
+        console.log(username);
 
         form.submit(function (e) {
             e.preventDefault();
-            socket.emit('send-message', message.val());
+            message.msg = message.val();
+            message.nick = $('#username').val(); 
+                socket.emit('send-message', message);
             message.val('');
         });
         socket.on('new message', function (data) {
@@ -46,26 +39,27 @@
         });
             
     });
-    $('#nickbox').click(function (e) {
-        e.preventDefault();
-        socket.emit('new user', $('#nickname').val(), function (data) {
-            if (data) {
-                $('#nicknamediv').hide();
-                $('#messagediv').show();
-            } else {
-                $('#error').val('Name already taken');
-            }
-        });
-        $('#nickname').val('');
-    });
-    socket.on('username', function(data) {
-        var html = "";
-        console.log(data);
-        for (i = 0; i < data.length; i++) {
-            html += data[i] + "<br/>";
-            $('#users').append(html);
-        }
-    });
+    //$('#nickbox').click(function (e) {
+    //    e.preventDefault();
+    //    
+    //   socket.emit('new user', $('#nickname').val(), function (data) {
+    //        if (data) {
+    //            $('#nicknamediv').hide();
+    //            $('#messagediv').show();
+    //        } else {
+    //            $('#error').val('Name already taken');
+    //        }
+    //    });
+    //    $('#nickname').val('');
+    //});
+    //socket.on('username', function(data) {
+    //    var html = "";
+    //    console.log(data);
+    //    for (i = 0; i < data.length; i++) {
+    //        html += data[i] + "<br/>";
+    //       $('#users').append(html);
+    //    }
+    //});
         
 
 </script>
