--- a/public/views/pages/home.html
+++ b/public/views/pages/home.html
@@ -1,5 +1,5 @@
 ﻿<div class="ui message">
     <div class="message">
-        <p>Welcome, user: </p>
+        <p>Welcome, {{user}} </p>
     </div>
 </div>
