--- a/public/views/pages/marketplace.html
+++ b/public/views/pages/marketplace.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="description">
                     <p>Upgrade your crew level</p>
-                    <button class="ui fluid large teal submit button">Upgrade</button>
+                    <button class="ui fluid large teal submit button" ng-click="upgradeCrew()">Upgrade</button>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="description">
                     <p>Upgrade your gearbox level</p>
-                    <button class="ui fluid large teal submit button">Upgrade</button>
+                    <button class="ui fluid large teal submit button" ng-click="upgradeGearBox()">Upgrade</button>
                 </div>
             </div>
         </div>
