--- a/public/views/pages/leaderboard.html
+++ b/public/views/pages/leaderboard.html
@@ -1,4 +1,4 @@
-﻿<h3>Leaderboards</h3>
+<h3>Leaderboards</h3>
 
 <h4>Here is the top teams at the moment</h4>
 
@@ -11,7 +11,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="team in leader.teamdata track by $name| orderBy:'-cash'">
+        <tr ng-repeat="team in leader.teamdata | orderBy:'-experience'">
             <th>{{team.name}}</th>
             <th>{{team.experience}}</th>
             <th>{{team.cash}}</th>
