--- a/public/views/pages/management.html
+++ b/public/views/pages/management.html
@@ -25,12 +25,18 @@
         <tr>
             <th>Car name</th>
             <th>body Level</th>
+            <th>Engine Level</th>
+            <th>Gearbox Level</th>
+            <th>Tyre Level</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <th>{{cardata.name}}</th>
             <th>{{cardata.bodyLevel}}</th>
+            <th>{{cardata.engineLevel}}</th>
+            <th>{{cardata.gearboxLevel}}</th>
+            <th>{{cardata.tyreType}}</th>
         </tr>
     </tbody>
 </table>
